[package]
name = "clnrest-rs"
version = "0.2.2"
edition = "2021"
license = "MIT"
description = "Transforms RPC calls into REST APIs"
homepage = "https://github.com/ElementsProject/lightning/tree/master/plugins"
repository = "https://github.com/ElementsProject/lightning"

[dependencies]
anyhow = "1"
bytes = "1"
log = { version = "0.4", features = ['std'] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-util = { version = "0.7", features = ["codec"] }
tokio = { version="1", features = ['io-std', 'rt-multi-thread', 'sync', 'macros', 'io-util'] }
axum = "0.7"
axum-server = { version = "0.6", features = ["tls-rustls"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
rcgen = "0.13"
hyper = "1"
tower= "0.5"
tower-http = { version = "0.6", features = ["cors", "set-header"] }
utoipa = { version = "5", features = ['axum_extras'] }
utoipa-swagger-ui = { version = "8", features = ['axum'] }

log-panics = "2"
socketioxide = "0.15"

cln-plugin = "0.3"
# cln-plugin = { path="../lightning/plugins/", version = "^0.2" }
cln-rpc = "0.3"
# cln-rpc = { path="../lightning/cln-rpc/", version = "^0.2" }


[profile.optimized]
inherits = "release"
strip = "debuginfo"
codegen-units = 1
lto = "fat"
debug = false